# Manager

./: Bluetooth  CMakeLists.txt  build.sh
.cache/clangd/index/: Bluetooth.cpp.1E50B451031FA852.idx  Bluetooth.h.B462C706719BD3D8.idx  BluetoothItem.cpp.4DD920D8B55A3AE5.idx  BluetoothItem.h.FCD5A99A840B4A57.idx  BluetoothList.cpp.271F1C9615E47FAC.idx  BluetoothList.h.13F532DA23E0E657.idx  BluetoothListModel.cpp.0FE5EB59D09C93A9.idx  BluetoothListModel.h.1A9536ED35A76CF3.idx  Device.cpp.D8F010DF5FA69C7C.idx  Device.h.B78D91C8563C5220.idx  DeviceDelegate.cpp.1544CC295A16F0FF.idx  DeviceDelegate.h.615B0C33A0DBCB3D.idx  DeviceSortFilterProxy.h.B4CED9B8D4CC8E29.idx  LoadQSS.h.FE3CFDFC16A9FF03.idx  TopBar.cpp.C376C709FDA37B9F.idx  TopBar.h.64AC1D4D36830D29.idx  main.cpp.A861592C7810904C.idx
include/: Bluetooth.h  BluetoothItem.h  BluetoothList.h  BluetoothListModel.h  Device.h  DeviceDelegate.h  DeviceSortFilterProxy.h  LoadQSS.h  TopBar.h
src/: Bluetooth.cpp  BluetoothItem.cpp  BluetoothList.cpp  BluetoothListModel.cpp  Device.cpp  DeviceDelegate.cpp  TopBar.cpp  main.cpp
styles/: item.qss  list.qss  main.qss  topbar.qss
